add styling to final layout

--- a/project/final_project/index.html
+++ b/project/final_project/index.html
@@ -16,6 +16,7 @@
 	</head>
 	<body>
 		<main>
+			<!-- Hero section -->
 			<section class="hero">
 				<header class="container-fluid">
 					<nav class="nav">
@@ -241,6 +242,7 @@
 					<i class="arrow fas fa-arrow-right"></i>
 				</div>
 			</section>
+			<!-- theme -->
 			<section class="container text-center">
 				<div class="theme">
 					<div>
@@ -254,12 +256,14 @@
 					</div>
 				</div>
 			</section>
+			<!-- feature header -->
 			<section class="feature-header text-center">
 				<div class="container">
 					<h2 class="feature-header__heading">Take Full Control of Your Site</h2>
 					<p class="feature-header__intro">Check out an incredible set of features provided by Intense. We collected all common required features in one theme. That makes Intense one of the most awesome themes on the market. Intense allows you to take control of almost every element and section of the site.</p>
 				</div>
 			</section>
+			<!-- feature -->
 			<section class="features">
 				<div class="container">
 					<div class="text-center feature__container">
@@ -349,12 +353,14 @@
 					<img class="features__bg img-responsive" src="assets/media/background-01-1920x1275.jpg" alt="" >
 				</div>
 			</section>
+			<!-- ad section -->
 			<section class="ad">
 				<div class="container ad__container">
 					<h2 class="ad__heading">Intense is exactly what you need</h2>
 					<button class="ad__button"><i class="fas fa-cart-plus"></i>Buy Intense Now</button>
 				</div>
 			</section>
+			<!-- about section -->
 			<section class="about">
 				<div class="container clearfix">
 					<div class="col-md-6">
@@ -367,6 +373,7 @@
 					</div>
 				</div>
 			</section>
+			<!-- data -->
 			<section class="data text-center">
 				<div class="container data__container">
 					<div class="data__item">
@@ -391,6 +398,7 @@
 					</div>
 				</div>
 			</section>
+			<!-- event -->
 			<section class="event">
 				<figure class="event-top">
 					<img src="assets/media/moqup-home-desktop-skewed.png" alt="" class="event-figure">
@@ -495,14 +503,92 @@
 				</div>
 			</section>
 			</section>
+			<!-- event-bottom -->
 			<section class="event__bottom">
 				<div class="black__triangle"></div>
 				<button class="event__button">VIEW ALL ADDITIONAL FEATURES</button>
 			</section>
+			<!-- intense-theme -->
 			<section class="intense__theme text-center">
 				<h3>Child themes</h3>
 				<h4>Check out other themes based on <span class="intense__span">INTENSE</span></h4>
+				<nav>
+					<ul>
+						<li>ALL</li>
+						<li>INFRASTRUCTURE</li>
+						<li>PORTFOLIO</li>
+						<li>BLOG</li>
+						<li>AGENCY</li>
+						<li>CREATIVE</li>
+					</ul>
+				</nav>
+				<div class="figure__container">
+					<figure class="figure__item">
+						<img src="assets/media/intense-restaurant-570x428.jpg" alt="RESTAURANT">
+						<div class="figure__text">
+							<h3>INTENSE RESTAURANT</h3>
+							<h4>BEST FOR RESTAURANT AND CAFES</h4>
+						</div>
+					</figure>
+					<figure class="figure__item">
+						<img src="assets/media/intense-restaurant-570x428.jpg" alt="RESTAURANT">
+						<div class="figure__text">
+							<h3>INTENSE RESTAURANT</h3>
+							<h4>BEST FOR RESTAURANT AND CAFES</h4>
+						</div>
+					</figure>
+					<figure class="figure__item">
+						<img src="assets/media/intense-restaurant-570x428.jpg" alt="RESTAURANT">
+						<div class="figure__text">
+							<h3>INTENSE RESTAURANT</h3>
+							<h4>BEST FOR RESTAURANT AND CAFES</h4>
+						</div>
+					</figure>
+					<figure class="figure__item">
+						<img src="assets/media/intense-restaurant-570x428.jpg" alt="RESTAURANT">
+						<div class="figure__text">
+							<h3>INTENSE RESTAURANT</h3>
+							<h4>BEST FOR RESTAURANT AND CAFES</h4>
+						</div>
+					</figure>
+					<figure class="figure__item">
+						<img src="assets/media/intense-restaurant-570x428.jpg" alt="RESTAURANT">
+						<div class="figure__text">
+							<h3>INTENSE RESTAURANT</h3>
+							<h4>BEST FOR RESTAURANT AND CAFES</h4>
+						</div>
+					</figure>
+					<figure class="figure__item">
+						<img src="assets/media/intense-restaurant-570x428.jpg" alt="RESTAURANT">
+						<div class="figure__text">
+							<h3>INTENSE RESTAURANT</h3>
+							<h4>BEST FOR RESTAURANT AND CAFES</h4>
+						</div>
+					</figure>
+					<figure class="figure__item">
+						<img src="assets/media/intense-restaurant-570x428.jpg" alt="RESTAURANT">
+						<div class="figure__text">
+							<h3>INTENSE RESTAURANT</h3>
+							<h4>BEST FOR RESTAURANT AND CAFES</h4>
+						</div>
+					</figure>
+					<figure class="figure__item">
+						<img src="assets/media/intense-restaurant-570x428.jpg" alt="RESTAURANT">
+						<div class="figure__text">
+							<h3>INTENSE RESTAURANT</h3>
+							<h4>BEST FOR RESTAURANT AND CAFES</h4>
+						</div>
+					</figure>
+					<figure class="figure__item">
+						<img src="assets/media/intense-restaurant-570x428.jpg" alt="RESTAURANT">
+						<div class="figure__text">
+							<h3>INTENSE RESTAURANT</h3>
+							<h4>BEST FOR RESTAURANT AND CAFES</h4>
+						</div>
+					</figure>
+				</div>
 			</section>
+			<!-- team -->
 			<section class="team">
 				<div class="team__header text-center">
 					<h3>Meet Our Team</h3>
@@ -529,8 +615,8 @@
 					</div>
 					<div class="member text-center">
 						<img src="assets/media/user-july-mao-140x140.jpg" alt="" class="member__list">
-						<h3>John Doe</h3>
-						<h5>Software Developer</h5>
+						<h3>July Mao</h3>
+						<h5>Support Operator</h5>
 						<hr class="member__hr">
 						<div class="media__content">
 							<div class="media__icon">
@@ -546,8 +632,8 @@
 					</div>
 					<div class="member text-center">
 						<img src="assets/media/user-bernard-show-140x140.jpg" alt="" class="member__list">
-						<h3>John Doe</h3>
-						<h5>Software Developer</h5>
+						<h3>Bernard Show</h3>
+						<h5>Creative Director</h5>
 						<hr class="member__hr">
 						<div class="media__content">
 							<div class="media__icon">
@@ -563,8 +649,8 @@
 					</div>
 					<div class="member text-center">
 						<img src="assets/media/user-ronald-oswald-140x140.jpg" alt="" class="member__list">
-						<h3>John Doe</h3>
-						<h5>Software Developer</h5>
+						<h3>Ronald Oswald</h3>
+						<h5>Founder, sales</h5>
 						<hr class="member__hr">
 						<div class="media__content">
 							<div class="media__icon">
@@ -580,22 +666,24 @@
 					</div>
 				</div>
 			</section>
+			<!-- clients -->
 			<section class="clients text-center">
 				<h2>What Clients Say?</h2>
 				<div class="client__hr"></div>
 				<div class="client__image">
+					<img src="assets/media/user-ronald-oswald-140x140.jpg" alt="" class="client__img__list one">
 					<img src="assets/media/user-ronald-oswald-140x140.jpg" alt="" class="client__img__list">
-					<img src="assets/media/user-ronald-oswald-140x140.jpg" alt="" class="client__img__list">
-					<img src="assets/media/user-ronald-oswald-140x140.jpg" alt="" class="client__img__list">
+					<img src="assets/media/user-ronald-oswald-140x140.jpg" alt="" class="client__img__list middle">
 					<img src="assets/media/user-ronald-oswald-140x140.jpg" alt="" class="client__img__list">
 					<img src="assets/media/user-ronald-oswald-140x140.jpg" alt="" class="client__img__list">
 				</div>
 				<p>The support service is really excellent at all levels, from first contact to more difficult IT actions. I feel safe and guaranteed regarding the purchase of this template. Thanks a lot!</p>
 				<h3>MARKETING, AT THEME.CO</h3>
 			</section>
+			<!-- footer -->
 			<section class="footer">
 				<div class="footer__header">
-					<h2>INTENSE</h2>
+					<img src="assets/media/logo-light.png" alt="">
 					<p>Feel the power of Nature</p>
 					<div class="media__content">
 						<div class="media__icon">
@@ -633,11 +721,15 @@
 					</ul>
 				</div>
 				<div class="latest__news">
+					<h5>-> 05/14/2018</h5>
 					<h3>Let's change the world</h3>
+					<h5>-> 05/14/2018</h5>					
 					<h3>The Meaning of Web Design</h3>
+					<h5>-> 05/14/2018</h5>
 					<h3>Get Started With TemplateMonster</h3>
 				</div>
 			</section>
+			<!-- footer-bottom -->
 			<section class="footer__bottom text-center">
 				<small>Intense &copy; 2018. Privacy Policy</small>
 			</section>
