--- a/project/final_project/index.html
+++ b/project/final_project/index.html
@@ -9,6 +9,7 @@
 		<!-- Font Family -->
 		<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Yesteryear" rel="stylesheet">
 
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="assets/stylesheet/style.css
@@ -357,7 +358,10 @@
 			<section class="ad">
 				<div class="container ad__container">
 					<h2 class="ad__heading">Intense is exactly what you need</h2>
-					<button class="ad__button"><i class="fas fa-cart-plus"></i>Buy Intense Now</button>
+					<button class="ad__button builder intense"><i class="fas fa-cart-plus"></i>Buy Intense Now
+						<div class="bubble3"></div>
+						<div class="bubble4"></div>
+					</button>
 				</div>
 			</section>
 			<!-- about section -->
@@ -506,7 +510,10 @@
 			<!-- event-bottom -->
 			<section class="event__bottom">
 				<div class="black__triangle"></div>
-				<button class="event__button">VIEW ALL ADDITIONAL FEATURES</button>
+				<button class="event__button builder intense">VIEW ALL ADDITIONAL FEATURES
+					<div class="bubble3"></div>
+					<div class="bubble4"></div>
+				</button>
 			</section>
 			<!-- intense-theme -->
 			<section class="intense__theme text-center">
@@ -602,13 +609,13 @@
 						<h5>Software Developer</h5>
 						<hr class="member__hr">
 						<div class="media__content">
-							<div class="media__icon">
+							<div class="media__icon facebook">
 								<i class="fab fa-facebook-f"></i>
 							</div>
-							<div class="media__icon">
+							<div class="media__icon twitter">
 								<i class="fab fa-twitter"></i>
 							</div>
-							<div class="media__icon">
+							<div class="media__icon google">
 								<i class="fab fa-google-plus-g"></i>
 							</div>
 						</div>
@@ -619,13 +626,13 @@
 						<h5>Support Operator</h5>
 						<hr class="member__hr">
 						<div class="media__content">
-							<div class="media__icon">
+							<div class="media__icon facebook">
 								<i class="fab fa-facebook-f"></i>
 							</div>
-							<div class="media__icon">
+							<div class="media__icon twitter">
 								<i class="fab fa-twitter"></i>
 							</div>
-							<div class="media__icon">
+							<div class="media__icon google">
 								<i class="fab fa-google-plus-g"></i>
 							</div>
 						</div>
@@ -636,13 +643,13 @@
 						<h5>Creative Director</h5>
 						<hr class="member__hr">
 						<div class="media__content">
-							<div class="media__icon">
+							<div class="media__icon facebook">
 								<i class="fab fa-facebook-f"></i>
 							</div>
-							<div class="media__icon">
+							<div class="media__icon twitter">
 								<i class="fab fa-twitter"></i>
 							</div>
-							<div class="media__icon">
+							<div class="media__icon google">
 								<i class="fab fa-google-plus-g"></i>
 							</div>
 						</div>
@@ -653,13 +660,13 @@
 						<h5>Founder, sales</h5>
 						<hr class="member__hr">
 						<div class="media__content">
-							<div class="media__icon">
+							<div class="media__icon facebook">
 								<i class="fab fa-facebook-f"></i>
 							</div>
-							<div class="media__icon">
+							<div class="media__icon twitter">
 								<i class="fab fa-twitter"></i>
 							</div>
-							<div class="media__icon">
+							<div class="media__icon google">
 								<i class="fab fa-google-plus-g"></i>
 							</div>
 						</div>
@@ -678,7 +685,8 @@
 					<img src="assets/media/user-ronald-oswald-140x140.jpg" alt="" class="client__img__list">
 				</div>
 				<p>The support service is really excellent at all levels, from first contact to more difficult IT actions. I feel safe and guaranteed regarding the purchase of this template. Thanks a lot!</p>
-				<h3>MARKETING, AT THEME.CO</h3>
+				<h3>Kira Force</h3>
+				<h4>MARKETING, AT THEME.CO</h4>
 			</section>
 			<!-- footer -->
 			<section class="footer">
@@ -686,16 +694,16 @@
 					<img src="assets/media/logo-light.png" alt="">
 					<p>Feel the power of Nature</p>
 					<div class="media__content">
-						<div class="media__icon">
+						<div class="media__icon facebook">
 							<i class="fab fa-facebook-f"></i>
 						</div>
-						<div class="media__icon">
+						<div class="media__icon twitter">
 							<i class="fab fa-twitter"></i>
 						</div>
-						<div class="media__icon">
+						<div class="media__icon google">
 							<i class="fab fa-google-plus-g"></i>
 						</div>
-						<div class="media__icon">
+						<div class="media__icon linkedin">
 							<i class="fab fa-linkedin-in"></i>
 						</div>
 					</div>
