finalise final porject 2

--- a/practice/Day27/layout3/assets/media/Final project2.html
+++ b/practice/Day27/layout3/assets/media/Final project2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
+<!-- saved from url=(0089)file:///home/abhishek/Documents/learn/html_css_practice/project/final_project2/index.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Final project2</title>
-    <link rel="stylesheet" href="assets/stylesheet/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Final project2_files/style.css">
+    <link rel="stylesheet" href="./Final project2_files/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   </head>
   <body>
     <!-- container -->
@@ -14,18 +14,18 @@
       <!-- header logo -->
       <header class="heading">
         <div class="header__logo ">
-          <img src="assets/media/home-img.jpg" alt="logo image" class=" logo__image">
+          <img src="./Final project2_files/home-img.jpg" alt="logo image" class=" logo__image img-responsive">
           <h1>Stimulus</h1>
         </div>
         <!-- header details -->
         <div class="header__details">
           <nav>
             <ul>
-              <li><a href="#">home</a></li>
-              <li><a href="#">about me</a></li>
-              <li><a href="#">experiences</a></li>
-              <li><a href="#">testimonial</a></li>
-              <li><a href="#">contact</a></li>
+              <li><a href="file:///home/abhishek/Documents/learn/html_css_practice/project/final_project2/index.html#">home</a></li>
+              <li><a href="file:///home/abhishek/Documents/learn/html_css_practice/project/final_project2/index.html#">about me</a></li>
+              <li><a href="file:///home/abhishek/Documents/learn/html_css_practice/project/final_project2/index.html#">experiences</a></li>
+              <li><a href="file:///home/abhishek/Documents/learn/html_css_practice/project/final_project2/index.html#">testimonial</a></li>
+              <li><a href="file:///home/abhishek/Documents/learn/html_css_practice/project/final_project2/index.html#">contact</a></li>
             </ul>
           </nav>
           <div class="header__desc">
@@ -47,7 +47,7 @@
         </div>
         <!-- my skill orange -->
         <div class="my__skill orange">
-          <img src="assets/media/about-img.jpg" alt="about image" class="img-responsive about-img">
+          <img src="./Final project2_files/about-img.jpg" alt="about image" class="img-responsive about-img">
           <div class="skill__details">
             <h3>My Skills</h3>
             <h4>Photoshop,HTML CSS JS,Web Design </h4>
@@ -63,7 +63,7 @@
             </div>
             <div class="skill__list">
               <h5 class="text-right">80%  </h5>
-              <h5 class="text-left">HTML & CSS</h5>
+              <h5 class="text-left">HTML &amp; CSS</h5>
               <div class="html__css"></div>
             </div>
           </div>
@@ -100,9 +100,8 @@
       </div>
 
       <!-- experience -->
-      <div class="experience2"> 
+      <div class="experience"> 
         <div class="experience__image">
-          <img src="assets/media/experience-img.jpg" class="img-responsive" alt="">
         </div>
         <!-- eperience -->
         <div class="experience red">
@@ -125,7 +124,8 @@
         </div>
       </div>
 
-      <div class="experience2">  
+      <!-- experience -->
+      <div class="experience">  
         <div class="experience orange">
           <h2>My Education</h2>
           <h5>Previous companies and my tasks</h5>
@@ -146,23 +146,22 @@
         </div>
         <!-- education -->
         <div class="education__image">
-          <img src="assets/media/experience-img.jpg" class="img-responsive" alt="">
         </div>
       </div>
 
       <!-- form -->
-      <div class="address__section">  
+      <div class="form">  
         <div class="form red">
           <h2>Say hello</h2>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
           <input type="text" class="red" placeholder="Your Name">
           <input type="email" name="" id="" placeholder="Your Email" class="red">
-          <textarea name="" id="" class="red"  placeholder="Write Your Message..."></textarea>
+          <textarea name="" id="" class="red" placeholder="Write Your Message..."></textarea>
           <button class="send">Send</button>
-          </div>
+        </div>
         <!-- address -->
         <div class="address">
-          <img src="assets/media/contact-img.jpg" alt="" class="img-responsive address__image">
+          <img src="./Final project2_files/contact-img.jpg" alt="" class="img-responsive address__image">
           <div class="address__details">
             <h2>Visit my Office</h2>
             <p>456 New street 22000, New York city, USA</p>
@@ -172,17 +171,18 @@
             <h5><i class="fas fa-globe-asia"></i>company.co</h5>
           </div>
         </div>
-        </div>
-      
+      </div>
 
       <!-- map -->
-      <div class="map__section red">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13504.714156683234!2d76.36039843334918!3d32.19941944840217!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391b522c7cd8b85b%3A0x9d68653444d4c03a!2sRakkar%2C+Himachal+Pradesh!5e0!3m2!1sen!2sin!4v1538660797650" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen class="google__map"></iframe>
+      <div class="map__section">
+        <div class="map red">
+            <iframe src="./Final project2_files/embed.html" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen="" class="google__map"></iframe>
+        </div>
       </div>  
       <!-- footer -->
       <div class="footer__section">
         <div class="footer">
-          <small>Copyright &copy; 2016 Your company | Design:<span class="design"> Altcampus</span></small>
+          <small>Copyright © 2016 Your company | Design:<span class="design"> Altcampus</span></small>
           <div class="media__icon">
             <i class="fab fa-facebook-f"></i>
             <i class="fab fa-twitter"></i>
@@ -193,5 +193,5 @@
         </div>
       </div>
     </div>
-  </body>
-</html>
+  
+</body></html>
