add portfolio improvement

--- a/project/final_project2/index.html
+++ b/project/final_project2/index.html
@@ -162,7 +162,7 @@
           </div>
         <!-- address -->
         <div class="address">
-          <img src="assets/media/contact-img.jpg" alt="" class="img-responsive address__image">
+          <img src="assets/media/contact-img.jpg" alt="" class="address__image">
           <div class="address__details">
             <h2>Visit my Office</h2>
             <p>456 New street 22000, New York city, USA</p>
