add savila project layouts

--- a/project/savila project/index.html
+++ b/project/savila project/index.html
@@ -31,7 +31,7 @@
     </section>
     <section class="secondary_container">
       <h3>Best practice</h3>
-      <div class="service__list">
+      <div class="service__list service__main">
         <div class="service_item">
           <h5>Free Breakfast Always</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis blanditiis eligendi harum laboriosam et </p>
@@ -57,11 +57,6 @@
     <section class="secondary_container">
         <h3>Our Rooms</h3>
         <div class="service__list">
-          <div class="service_item">
-            <img src="assets/media/main.jpg" alt="">
-            <h5>Free Breakfast Always</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis blanditiis eligendi harum laboriosam et </p>
-          </div>
           <div class="service_item">
             <img src="assets/media/main.jpg" alt="">
             <h5>Free Breakfast Always</h5>
