--- a/project/savila project/contact.html
+++ b/project/savila project/contact.html
@@ -33,8 +33,38 @@
     <section class="secondary_container">
       <h3>Contact</h3>
       <div class="contactSection">
-        <span>hello</span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis doloribus omnis distinctio. Illum, obcaecati sint! Qui quisquam et, quaerat, culpa soluta deserunt aperiam suscipit expedita, quo modi deleniti iusto?</p>
+        <div class="address">
+          <span>Address</span>
+          <p>Address line 1</p>
+          <p>Address line 1</p>
+
+          <span>Address</span>
+          <p>Address line 1</p>
+          <p>Address line 1</p>
+
+          <span>Address</span>
+          <p>Address line 1</p>
+          <p>Address line 1</p>
+        </div>
+        
+        <p><iframe src="https://www.google.com/maps/embed?pb=" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+      </div>
+      <h3>Contact Form</h3>
+      <div class="contact__form">
+        <div class="address">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat corrupti minus porro quod error commodi dicta nisi vero </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad cumque voluptatum asperiores modi doloribus placeat obcaecati </p>
+        </div>
+        <div class="contact__details">
+          <input type="text" placeholder = "input text">
+          <input type="text" placeholder = "input text">
+          <input type="text" placeholder = "input text">
+        </div>
+        <div class="contact__us">
+          <input type="text" class = "input1" placeholder = "input text">
+          <input type="text" class = "input2" placeholder = "input text">
+          <button>Submit</button>
+        </div>
       </div>
     </section>
       <section class="footer padding">
