add improvement in savilla project

--- a/project/savila project/about.html
+++ b/project/savila project/about.html
@@ -26,25 +26,33 @@
       </header>
     </section>
     <div class="secondary_container">
-      <h3>About</h3>
+      <h3>About Savilla</h3>
       <div class="about__details">
-        <div class="details__item">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi voluptas, libero, obcaecati vero nostrum sequi, quos repudiandae incidunt necessitatibus optio eligendi. Officia aperiam, mollitia alias in illo expedita libero tempore.
+        <div class="details__item left">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero vitae numquam neque suscipit natus, ex rem beatae quos. </p>
         </div>
         <div class="details__item">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit pariatur earum corporis, consectetur, animi doloremque voluptatum libero et illo reprehenderit optio quibusdam reiciendis. Quod repellendus voluptate rerum esse natus excepturi.
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero vitae numquam neque suscipit natus, ex rem beatae quos. </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, cum. Odit quis assumenda dolorem porro, suscipit</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, cum. Odit quis assumenda dolorem porro, suscipit</p>
         </div>
         <div class="details__item">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel doloremque eveniet dolore maiores pariatur sit deleniti, quos ad dolorum fugit fugiat quis nemo ratione provident dicta reprehenderit dolores velit tenetur.
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero vitae numquam neque suscipit natus, ex rem beatae quos. </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, cum. Odit quis assumenda dolorem porro, suscipit</p>
         </div>
       </div>
     </div>
     <section class="secondary_container section-two">
       <img src="assets/media/main.jpg" alt="" class="service-image">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis doloribus omnis distinctio. Illum, obcaecati sint! Qui quisquam et, quaerat, culpa soluta deserunt aperiam suscipit expedita, quo modi deleniti iusto?</p>
+      <div class="service__details">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, cum. Odit quis assumenda dolorem porro, suscipit</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, cum. Odit quis assumenda dolorem porro, suscipit</p>
+      </div>
     </section>
     <section class=" secondary_container our__future">
-      <div class="goal">
+      <div class="mission">
         <h4>Our Goals</h4>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum numquam amet maxime omnis ipsam cupiditate odit vel quia fuga cum similique atque, autem fugiat doloribus unde officia. Asperiores, tempora doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere quo, perferendis dignissimos at molestiae illo ea iusto! Ullam deserunt enim, nihil dolores maiores culpa totam. Officia sapiente aut amet esse?</p>
       </div>
