--- a/project/savila project/index.html
+++ b/project/savila project/index.html
@@ -18,7 +18,7 @@
             <li><a href="#"><span class="sevilla_style">Sevilla </span></a></li>
             <li><a href="#">Book</a></li>
             <li><a href="#">Contact</a></li>
-            <div class="hotel">
+            <div class="hotel mainpage">
               <li><a href="">Hotel</a></li>
             </div> 
           </ul>
