--- a/project/savila project/contact.html
+++ b/project/savila project/contact.html
@@ -35,16 +35,18 @@
       <div class="contactSection">
         <div class="address">
           <span>Address</span>
-          <p>Address line 1</p>
-          <p>Address line 1</p>
+          <p>Akbar Road, </p>
+          <p>New Delhi.</p>
 
           <span>Address</span>
-          <p>Address line 1</p>
-          <p>Address line 1</p>
+          <p>Affairs North Block </p>
+          <p>New Delhi - 110001</p>
 
           <span>Address</span>
-          <p>Address line 1</p>
-          <p>Address line 1</p>
+          <p>Room No 104, </p>
+          <p>North Block, </p>
+          <p>Central Secretariat ,</p>
+          <p>New Delhi-110001</p>
         </div>
         
         <p><iframe src="https://www.google.com/maps/embed?pb=" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe></p>
@@ -63,7 +65,7 @@
         <div class="contact__us">
           <input type="text" class = "input1" placeholder = "input text">
           <input type="text" class = "input2" placeholder = "input text">
-          <button>Submit</button>
+          <button class="submit">Submit</button>
         </div>
       </div>
     </section>
